# bods-brightquery

./: .gitignore  README.md  pyproject.toml
src/bods_brightquery/: cli.py  config.py  pipeline.py
src/bods_brightquery/ingestion/: models.py  reader.py
src/bods_brightquery/output/: writer.py
src/bods_brightquery/transform/: entities.py  identifiers.py  persons.py  relationships.py
src/bods_brightquery/utils/: dates.py  statements.py
tests/: conftest.py  test_entities.py  test_identifiers.py  test_persons.py  test_pipeline.py  test_relationships.py
